namespace/media/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: jellyseerr
  type: ClusterIP
