namespace/media/jellyseerr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`njellyseerr.oglesby.io`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`njellyseerr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: jellyseerr
          port: 5055
